# simple-prompts-mcp

./: LICENSE  Makefile  README.md  README_ja.md  pyproject.toml
src/simple_prompts_mcp/: __init__.py  exceptions.py  get_prompt.py  list_prompts.py  models.py  server.py  utils.py
