[project]
name = "simple-prompts-mcp"
version = "0.1.1"
description = "Simple Prompt MCP Server"
readme = "README.md"
authors = [
    { name = "sinofseven", email = "em.s.00001@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]==1.8.1",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "pyyaml==6.0.2",
]

[project.scripts]
simple-prompts-mcp = "simple_prompts_mcp:main"

[project.urls]
Homepage = "https://github.com/sinofseven/simple-prompts-mcp"
Issues = "https://github.com/sinofseven/simple-prompts-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
